# HunterMatrix

./: BUILD_STATUS.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  ChangeLog.md  FINAL_UPLOAD_REPORT.md  INSTALL-cross-linux-arm64.md  INSTALL-cross-windows-arm64.md  INSTALL.md  NEWS.md  PROJECT_ENGLISH_SUMMARY.md  README.md  REFERENCES_UPDATE_COMPLETE.md  UPLOAD_STATUS.md  install.sh  package.json  quick_start.sh  start_huntermatrix.sh  uninstall.sh
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
HunterMatrix/: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STATUS.md  ENGLISH_CONVERSION_COMPLETE.md  LICENSE  PROJECT_COMPLETE_SUMMARY.md  README.Docker.md  README.md  SECURITY.md  UPLOAD_STATUS.md  clamav_manager.sh  fix_repo_structure.sh  make_executable.sh  test_theme_toggle.html
HunterMatrix/.github/: pull_request_template.md
HunterMatrix/ai-security/: README.md  ai_report_generator.py  ai_web_service.py  email_service.py  nlp_security_analyzer.py  report_config.yaml  report_scheduler.py  requirements.txt
HunterMatrix/etc/: clamd.conf.sample
HunterMatrix/huntermatrix-gui/: pnpm-lock.yaml
HunterMatrix/huntermatrix-gui/src-tauri/: Cargo.toml  tauri.conf.json
HunterMatrix/huntermatrix-gui/src-tauri/src/: main.rs
HunterMatrix/integrations/artifacts/: Custom.HunterMatrix.Scan.yaml
HunterMatrix/libclamav_rust/: Cargo.toml  cbindgen.toml
HunterMatrix/libclamav_rust/src/: codesign.rs
HunterMatrix/src/: App.tsx
HunterMatrix/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
HunterMatrix/src-tauri/src/: email_service.rs  lib.rs  main.rs  matrix_service.rs
HunterMatrix/src-tauri/templates/: daily_report.hbs  emergency_alert.hbs  threat_alert.hbs
HunterMatrix/unit_tests/: clamd_test.py  freshclam_test.py
HunterMatrix/unit_tests/clamscan/: assorted_test.py  bytecode_test.py  fp_check_test.py  match_offsets_test.py  (+1 more)
HunterMatrix/web-ui/: README.md  TESTING_GUIDE.md  huntermatrix_final.html  index-tailwind.html  start-tailwind.sh
ai-security/: AI_ARCHITECTURE.md  ai_response_system.py  generate_report.py  intelligent_threat_detector.py  setup_email.py
fuzz/: README.md
huntermatrix-gui/: README.md  package.json  tailwind.config.js
huntermatrix-gui/src/: App.tsx  index.css
integrations/: VELOCIRAPTOR_INTEGRATION.md  integration_config.yaml  ntopng_integration.py  simple_integration.py  velociraptor_huntermatrix.py
integrations/artifacts/: Custom.ThreatHunt.HunterMatrix.yaml
libclamav_rust/src/: onenote.rs
src-tauri/: email_config.toml
src-tauri/templates/: email_base.hbs
unit_tests/: libclamav_test.py  sigtool_test.py  testcase.py
unit_tests/clamscan/: _basic_test.py  allmatch_test.py  container_sigs_test.py  fuzzy_img_hash_test.py  heuristics_test.py  image_extraction_test.py  save_html_uris_test.py  save_pdf_uris_test.py
web-ui/: TAILWIND_FEATURES.md  styles.css  tailwind.config.js
(+5 files in other folders)
